--- a/package.json
+++ b/package.json
@@ -9,12 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "aws-sdk": "^2.1229.0",
+    "multiparty": "^4.2.3",
     "next": "12.3.1",
+    "next-auth": "^4.12.2",
+    "next-connect": "^0.12.2",
+    "nodemailer": "^6.8.0",
+    "pg": "^8.8.0",
+    "raw-body": "^2.5.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stripe": "^10.13.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.14",
+    "prisma": "^4.4.0",
+    "tailwindcss": "^3.1.8"
   }
 }
